[gd_scene load_steps=3 format=2]

[ext_resource path="res://Menu.gd" type="Script" id=1]
[ext_resource path="res://Menu.png" type="Texture" id=2]

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )

[node name="Menu" type="Sprite" parent="."]
position = Vector2( 513, 300.25 )
scale = Vector2( 0.647282, 0.5 )
texture = ExtResource( 2 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 28.0
margin_top = 472.0
margin_right = 139.0
margin_bottom = 571.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Start" type="Button" parent="VBoxContainer"]
margin_right = 111.0
margin_bottom = 20.0
text = "Start"

[node name="Params" type="Button" parent="VBoxContainer"]
margin_top = 24.0
margin_right = 111.0
margin_bottom = 44.0
text = "Param√®tres"

[node name="Exit" type="Button" parent="VBoxContainer"]
margin_top = 48.0
margin_right = 111.0
margin_bottom = 68.0
text = "Quitter"

[connection signal="pressed" from="VBoxContainer/Start" to="." method="_on_Start_pressed"]
[connection signal="pressed" from="VBoxContainer/Params" to="." method="_on_Params_pressed"]
[connection signal="pressed" from="VBoxContainer/Exit" to="." method="_on_Exit_pressed"]
